# AdventOfCode2020

./: .gitignore  CMakeLists.txt  main.cpp
Day1/: CMakeLists.txt  main.cpp
Day1/P1/: CMakeLists.txt
Day1/P2/: CMakeLists.txt  main.cpp
Day1/inc/: day1.h
Day1/include/: day1.h
Day1/src/: day1.cpp
Day2/: CMakeLists.txt  main.cpp
Day2/include/: day2.hpp
Day2/src/: day2.cpp
Day3/: CMakeLists.txt  main.cpp
Day3/inc/: day3.hpp
Day3/include/: day3.hpp
Day3/src/: day3.cpp
P1/: main.cpp
P1/P2/: main.cpp
util/: check.h  io.cpp  io.h
